tests/assembler/fail/test2.ial
type Foo
{
    field int32 Bar;
    field int32 Bar;
}
